zadanie5_ban.html

--- a/zadanie5_ban.html
+++ b/zadanie5_ban.html
@@ -1,7 +1,7 @@
 ﻿<html>
  <head>
  <title>Banaszczyk 3F</title>
-<center><font color="black" size="6" face="Arial"><b>wykonał: Jacek Banaszczyk mój numer w dzienniku 2, czyli mam układ [(26) mod 4=2] układ 2</b>
+<center><font color="black" size="6" face="Arial"><b>wykonała: Kasia Keler mój numer w dzienniku 14, czyli mam układ [(26) mod 4=2] układ 2</b>
  <script language="JavaScript">
 
  function WinOpen_banaszczyk1()
